--- a/src/pages/PopularChannels/style.scss
+++ b/src/pages/PopularChannels/style.scss
@@ -4,7 +4,7 @@
     padding: 10px;
 
     h4 {
-        color: #fff;
+        color: var(--textColor);
         /* Poppins/28/Medium */
         font-family: Poppins;
         font-size: 21px;
