--- a/src/pages/ProductDetail/style.scss
+++ b/src/pages/ProductDetail/style.scss
@@ -637,8 +637,8 @@
 
 .video__properties,
 .video__address {
-  color: #fff;
-  background: #121216;
+  color: var(--textColor);
+  background: var(--primaryColor);
   padding: 10px;
   margin: 24px 0 20px 0;
   border-radius: 16px;
@@ -657,7 +657,7 @@
 
   p a {
     font-size: 16px;
-    color: #fff;
+    color: var(--textColor);
   }
 
   .mapboxgl-map {
@@ -766,7 +766,7 @@
 
   .video__properties,
   .video__address {
-    padding: 0;
+    
 
     h4 {
       font-size: 18px;
