--- a/src/pages/Profile/components/Main/style.scss
+++ b/src/pages/Profile/components/Main/style.scss
@@ -1,10 +1,9 @@
 .profile_section {
   width: 100%;
   height: auto;
-  margin: 10px !important;
   .profile_bg_image {
     width: 100%;
-    height: 30vh;
+    height: 170px;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -16,7 +15,7 @@
     flex-wrap: wrap;
     align-items: center;
     transform: translateY(-45px);
-    padding-left: 50px;
+    padding: 10px 0 0 50px;
     gap: 5px 20px;
     .profile_img_content {
       width: 200px;
@@ -26,8 +25,8 @@
       background-size: cover;
     }
     .profile_text_content {
-      .profile_name {
-        color: var(--Neutral-White, #fff);
+      .profile_name p {
+        color: var(--textColor);
 
         /* Poppins/24/SemiBold */
         font-family: Poppins;
@@ -35,6 +34,7 @@
         font-style: normal;
         font-weight: 600;
         line-height: 32px; /* 133.333% */
+        
       }
       h6 {
         color: var(--blue-blue-500, #0385ca);
@@ -47,7 +47,8 @@
         line-height: 26px; /* 144.444% */
       }
       p {
-        color: var(--Text-5, #979eaf);
+        color: var(--textColor);
+        opacity: .7;
 
         /* Poppins/18/Regular */
         font-family: Poppins;
@@ -56,7 +57,7 @@
         font-weight: 400;
         line-height: 26px; /* 144.444% */
         span {
-          color: var(--Neutral-White, #fff);
+          color: var(--textColor);
 
           /* Poppins/18/Medium */
           font-family: Poppins;
@@ -73,11 +74,14 @@
 
 
 @media only screen and (width < 480px) {
+  .profile_bg_image{
+    height: 140px;
+  }
   .profile_section{
     .profile_info{
       padding: 0 0 0 5px;
       .profile_text_content {
-        .profile_name {
+        .profile_name p {
           font-size: 18px;
         }
       h6{
