--- a/src/pages/Profile/components/MyVideo/style.scss
+++ b/src/pages/Profile/components/MyVideo/style.scss
@@ -8,7 +8,7 @@
     align-items: flex-start;
     gap: 12px;
     border-radius: 24px;
-    background: var(--Gray-600, #141414);
+    background: var(--primaryColor);
 
     .main {
       width: 100%;
@@ -45,7 +45,7 @@
       align-items: center;
 
       h1 {
-        color: var(--Text-3, #c5c9d3);
+        color: var(--textColor);
         margin: 0;
         /* Poppins/14/Medium */
         font-family: Poppins;
@@ -57,7 +57,7 @@
       }
 
       h6 {
-        color: var(--Text-3, #c5c9d3);
+        color: var(--textColor);
 
         /* Poppins/14/Medium */
         font-family: Poppins;
@@ -74,7 +74,7 @@
     }
 
     p {
-      color: var(--Text-1, #f3f4f6);
+      color: var(--textColor);
       font-family: Poppins;
       font-size: 16px;
       font-style: normal;
@@ -93,7 +93,7 @@
       align-items: center;
 
       span {
-        color: var(--Text-1, #f3f4f6);
+        color: var(--textColor);
 
         /* Poppins/24/SemiBold */
         font-family: Poppins;
@@ -110,7 +110,7 @@
         align-items: center;
         gap: 10px;
 
-        img {
+        button, a {
           display: flex;
           width: 44px;
           padding: 12px;
@@ -118,13 +118,28 @@
           align-items: center;
           gap: 8px;
           border-radius: 16px;
-          border: 1px solid var(--Gray-400, #292929);
           transition: all 0.3s ease;
           cursor: pointer;
+          background: none;
+          position: relative;
+          border: 0;
+          &::after{
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            top: 0;
+            border: 1px solid var(--textColor);
+            opacity: .7;
+            border-radius: 16px;
 
+          }
           &:hover {
             border-radius: 16px;
-            background: var(--Gray-400, #292929);
+            background: var(--primaryColor);
+            opacity: .8;
+            transform: translateY(-2px);
           }
         }
       }
