--- a/src/pages/Subscriptions/style.scss
+++ b/src/pages/Subscriptions/style.scss
@@ -8,7 +8,7 @@
   .channelCard {
     .channelCard-context {
       h2 {
-        color: var(--Text-1, #F3F4F6);
+        color: var(--textColor);
         /* Poppins/20/SemiBold */
         font-family: Poppins;
         font-size: 20px;
@@ -21,7 +21,7 @@
   }
 
   h4 {
-    color: #fff;
+    color: var(--textColor);
     /* Poppins/28/Medium */
     font-family: Poppins;
     font-size: 21px;
@@ -39,7 +39,7 @@
     gap: 8px;
     border-radius: 16px;
     border: 1px solid var(--Text-11, #23272E);
-    color: var(--Neutral-White, #FFF);
+    color: var(--textColor);
     background-color: transparent;
     /* Poppins/16/SemiBold */
     font-family: Poppins;
@@ -54,7 +54,7 @@
   .unsubs-button {
     background-color: transparent;
     border: 1px solid var(--Text-11, #23272E);
-    color: var(--Text-4, #A2A8B7);
+    color: var(--textColor);
     padding: 12px 24px;
     border-radius: 16px;
     color: #F6F3F4;
