--- a/src/pages/TopVideos/style.scss
+++ b/src/pages/TopVideos/style.scss
@@ -27,7 +27,7 @@
   .ant-modal-content{
     border: 1px solid var(--Gray-400, #292929);
     background: var(--backgroundColor);
-    color: #fff;
+    color: var(--textColor);
     padding-top: 55px;
     .modal__btns{
       display: flex;
@@ -35,7 +35,7 @@
       padding: 0 16px;
       margin: 24px 0 0 0;
       button{
-        color: #fff;
+        color: var(--textColor);
         background: transparent;
         border: 0;
         outline: none;
@@ -45,6 +45,7 @@
           padding: 12px 24px;
           border-radius: 16px;
           transition:  all .3s ease-in-out;
+          color: #fff;
           &:hover{
             box-shadow: 0 0 5px 3px #0385CA;
           }
@@ -69,7 +70,7 @@
       outline: 0;
       width: calc((100% - 20px) / 3);
       height: 6px;
-      background: #23272E;
+      background: var(--primaryColor);
       border-radius: 6px;
       margin: 0;
       opacity: 1;
@@ -94,7 +95,7 @@
       padding: 12px 20px 12px 10px;
       border: 0;
       outline: 0;
-      color: #fff;
+      color: var(--textColor);
     }
   }
 
@@ -107,7 +108,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background: #16181D;
+      background: var(--primaryColor);
       padding: 12px;
       border-radius: 24px;
       margin: 0 0 16px 0;
@@ -141,7 +142,16 @@
       .cover__img{
         flex: 0;
         max-width: 200px;
+       
       position: static;
+        & > div{
+          overflow: hidden;
+          max-height: 60px;
+          border-radius: 12px;
+
+        }
+
+       
       }
       
     }
@@ -171,7 +181,7 @@
       padding: 12px 20px;
         border-radius: 16px;
         border: 1px solid  #23272E;
-        color: #fff;
+        color: var(--textColor);
         p{
           margin: 0;
         }
@@ -180,7 +190,7 @@
           outline: 0;
           background: transparent;
           padding: 0;
-          color: #fff;
+          color: var(--textColor);
         }
     }
   }
@@ -196,7 +206,7 @@
       border-radius: 16px;
       padding: 12px 20px;
       background: transparent;
-      color: #fff;
+      color: var(--textColor);
     }
   }
 }
@@ -213,7 +223,7 @@
     padding: 10px;
 
     h4 {
-        color: #fff;
+        color: var(--textColor);
         /* Poppins/28/Medium */
         font-family: Poppins;
         font-size: 21px;
@@ -248,7 +258,7 @@
         gap: 8px;
         border-radius: 16px;
         border: 1px solid var(--Text-11, #23272E);
-        color: var(--Neutral-White, #FFF);
+        color: var(--textColor);
         background-color: transparent;
         /* Poppins/16/SemiBold */
         font-family: Poppins;
@@ -330,7 +340,7 @@
   
   .path {
     fill: none;
-    stroke: white;
+    stroke: var(--textColor);
     stroke-width: 6;
     stroke-linecap: round;
     stroke-linejoin: round;
