--- a/src/pages/Settings/components/DeleteAccount/style.scss
+++ b/src/pages/Settings/components/DeleteAccount/style.scss
@@ -45,12 +45,15 @@
         font-style: normal;
         font-weight: 400;
         line-height: 24px;
-        color: white;
+        color: var(--textColor);
         display: flex;
         padding: 12px 20px;
         align-items: center;
         gap: 10px;
         align-self: stretch;
+        -webkit-text-fill-color: var(--textColor);
+;
+
       }
 
       input:focus ~ label,
@@ -58,7 +61,7 @@
       .active__input ~ label
        {
         transform: translateY(-40px);
-        color: white;
+        color: var(--textColor);
         font-style: normal;
         font-weight: 600;
         line-height: 24px;
