--- a/src/pages/Settings/components/General/style.scss
+++ b/src/pages/Settings/components/General/style.scss
@@ -37,7 +37,12 @@
       font-size: 14px;
     }
   }
+  .gender {
+    input{
+      position: absolute !important;
 
+    }
+  }
   .general_form {
     display: flex;
     justify-content: center;
@@ -47,7 +52,7 @@
       // width: 300px;
 
       label {
-        color: var(--Neutral-White, #FFF);
+        color:var(--textColor);
         font-size: 14px;
         font-style: normal;
         font-weight: 400;
@@ -58,7 +63,7 @@
       input {
         width: 100%;
         border: none;
-        border: 1px solid var(--Gray-400, #292929);
+        border: 1px solid var(--Gray-400, #7e7e7e);
         background-color: transparent !important;
         border-radius: 16px;
         outline: none;
@@ -66,10 +71,10 @@
         font-style: normal;
         font-weight: 400;
         line-height: 24px;
-        color: white;
-        padding-left: 15px;
+        color:var(--textColor);
         padding: 12px 20px;
       }
+     
 
       .form_select {
         width: 100%;
