--- a/src/pages/Settings/components/Password/style.scss
+++ b/src/pages/Settings/components/Password/style.scss
@@ -56,24 +56,28 @@
         font-style: normal;
         font-weight: 400;
         line-height: 24px;
-        color: white;
+        color: var(--textColor);
         padding-left: 15px;
+        -webkit-text-fill-color: var(--textColor);
+
       }
 
       input:focus ~ label,
-      input:valid ~ label {
+      input:valid ~ label
+      {
         transform: translateY(-40px);
-        color: white;
+        color: var(--textColor);
         font-size: 12px;
         font-style: normal;
         font-weight: 400;
         line-height: 24px;
       }
+     
 
       label {
         position: absolute;
         bottom: 13px;
-        color: var(--Gray-200, #7a7a7a);
+        color: var(--textColor);
         left: 0;
         pointer-events: none;
         transition: all 0.3s ease;
