--- a/src/pages/Settings/components/Privacy/style.scss
+++ b/src/pages/Settings/components/Privacy/style.scss
@@ -32,10 +32,10 @@
       align-items: center;
       align-self: stretch;
       border-radius: 12px;
-      background: var(--Text-13, #1b1d23);
+      background: var(--backgroundColor);
       margin-bottom: 14px;
       .mantine-Switch-label {
-        color: var(--Neutral-White, #fff);
+        color: var(--textColor);
 
         /* Poppins/16/SemiBold */
         font-family: Poppins;
