--- a/src/pages/Settings/components/ProfileInfo/style.scss
+++ b/src/pages/Settings/components/ProfileInfo/style.scss
@@ -147,7 +147,7 @@
   .profileinfo_form {
     .input-data {
       label {
-        color: var(--Neutral-White, #fff);
+        color: var(--textColor);
         font-size: 14px;
         font-style: normal;
         font-weight: 400;
@@ -165,7 +165,7 @@
         font-style: normal;
         font-weight: 400;
         line-height: 24px;
-        color: white;
+        color: var(--textColor);
         padding-left: 15px;
         padding: 12px 20px;
       }
